# Listen2

./: .gitignore  CLAUDE.md  README.md
LSTN2/: ContentView.swift  LSTN2App.swift  README.md
LSTN2.xcodeproj/: project.pbxproj
LSTN2/LSTN2/: ContentView.swift  LSTN2App.swift
LSTN2/LSTN2.xcodeproj/: project.pbxproj
LSTN2/LSTN2/Models/: Protocol.swift
LSTN2/LSTN2/Services/: EventRouter.swift  PythonManager.swift  SetupManager.swift  WebSocketClient.swift
LSTN2/LSTN2/State/: AppState.swift  SetupState.swift
LSTN2/Models/: Protocol.swift
LSTN2/Services/: AudioDeviceService.swift  EventRouter.swift  PythonManager.swift  WebSocketClient.swift
LSTN2/State/: AppState.swift
LSTN2/Views/: ActivityLogView.swift  KnowledgeBaseView.swift  QuestionListView.swift  SettingsView.swift  StatusBarView.swift  TranscriptView.swift
LSTN2/backend/: .gitignore  pyproject.toml
LSTN2/backend/src/listen/activity/: __init__.py  activity_log.py
LSTN2/backend/src/listen/intelligence/: question_detector.py
LSTN2/backend/src/listen/knowledge/: embeddings.py  ingestion.py
LSTN2/backend/src/listen/server/: ws_server.py
LSTN2/backend/src/listen/transcription/: transcript_persistence.py  transcript_store.py
LSTN2/backend/src/listen/utils/: errors.py  logging.py
LSTN2/backend/tests/: test_chunking.py  test_protocol.py  test_transcript_persistence.py
backend/: build.sh  pyproject.toml
backend/tests/: conftest.py  test_chunking.py  test_config.py  test_preprocessing.py  test_query_logger.py  test_transcript_persistence.py  test_transcript_store.py  test_wer_eval.py
(+46 files in other folders)
