[project]
name = "listen-backend"
version = "0.1.0"
description = "Real-time meeting co-pilot backend"
requires-python = ">=3.11,<3.14"
dependencies = [
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "soxr>=0.4",
    "websockets>=14.0",
    "openai>=1.50",
    "chromadb>=1.0",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "pypdf>=4.0",
    "docx2txt>=0.8",
    "watchdog>=4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/listen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
